Created the visual interface

--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="css/stylesheet.css">
-    <title>Lista de Tarefas</title>
-</head>
-<body>
-    <script scr="js/control.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/stylesheet.css" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+            rel="stylesheet"
+        />
+        <title>Lista de Tarefas</title>
+    </head>
+    <body>
+        <h1>Lista de Tarefas</h1>
+
+        <header>
+            <input id="inputTask" type="text" placeholder="Digite sua tarefa" />
+            <button class="add">Adicionar</button>
+        </header>
+        <main id="listArea">
+            <div class="item">
+                <div class="item-icon">
+                    <span class="material-symbols-outlined">
+                        radio_button_unchecked
+                    </span>
+                </div>
+                <div class="item-name">teste</div>
+                <div class="item-button">
+                    <button class="delete">
+                        <span class="material-symbols-outlined"> delete </span>
+                        Deletar
+                    </button>
+                </div>
+            </div>
+            <div class="item clicked">
+                <div class="item-icon">
+                    <span class="material-symbols-outlined check_circle">
+                        check_circle
+                    </span>
+                </div>
+                <div class="item-name">teste 2</div>
+                <div class="item-button">
+                    <button class="delete">
+                        <span class="material-symbols-outlined"> delete </span>
+                        Deletar
+                    </button>
+                </div>
+            </div>
+        </main>
+
+        <script src="js/control.js"></script>
+    </body>
 </html>
