Redesigned the UI and started saving in memory

--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=0.8" />
         <link rel="stylesheet" href="css/stylesheet.css" />
         <link
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
             rel="stylesheet"
         />
-        <title>Lista de Tarefas</title>
+        <title>Lista de Tarefas 2.0</title>
     </head>
     <body>
         <h1>Lista de Tarefas</h1>
-
-        <header>
-            <input id="input-task" type="text" placeholder="Digite sua tarefa" />
-            <button class="btn-add" onclick="addTask()">Adicionar</button>
-        </header>
-        <main id="list-area"></main>
+        <p>
+            <input class="input-task" type="text" placeholder="Digite sua tarefa" />
+            <button class="btn-add-task">Adicionar</button>
+        </p>
+        <ul class="list-area"></ul>
         <script src="js/control.js"></script>
     </body>
 </html>
